--- a/templates/main_info.html
+++ b/templates/main_info.html
@@ -3,37 +3,64 @@
  <head>
   <meta charset="utf-8" />
   <title>HTML5</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+  <style type="text/css">
+    body {
+
+      margin: 10%;
+    }
+
+
+    </style>
+
 
  </head>
+
+
+
+
  <body>
 
+   <nav class="navbar navbar-expand-lg navbar-light bg-light">
+     <a class="navbar-brand" href="#">TimePicker</a>
+     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+       <span class="navbar-toggler-icon"></span>
+     </button>
+     <div class="collapse navbar-collapse" id="navbarNav">
+       <ul class="navbar-nav">
+         <li class="nav-item active">
+           <a class="nav-link" href="/mainpage">Search! <span class="sr-only">(current)</span></a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link" href="/create_service">Create own service</a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link" href="/settings">Your account</a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link" href="/logout">Logout</a>
+         </li>
+       </ul>
+     </div>
+   </nav>
 
-  <h1>Hello,  {{name}}</h1>
-
-  {% if image %}
-  <p><img src="data:image/png;base64, {{image}}" style="width: 100px;"/></p>
-  {% else %}
-  <p>You haven't upload image</p>
-  {% endif %}
-
-  <p>Your phone: {{phone_num}}</p>
-
-  <button onclick="location.href = '/settings'">Settings</button>
-  <button onclick="location.href = '/create_service'">Create service</button>
-
-  <form method = "POST" action="/search_service">
-    <input class="input" type="text" name="search_for" placeholder="Ex: 'Barber'"  required>
-    <button type="submit" class="btn">Search!</button>
-  </form>
-
-  <button onclick="location.href = '/logout'">logout</button>
-
-
-
+  <div class="input-group mb-3">
+  <div class="input-group-prepend">
+    <button class="btn btn-outline-secondary" type="button">Find by service</button>
+    <button class="btn btn-outline-secondary" type="button">Find by name</button>
+  </div>
+  <input type="text" class="form-control" placeholder="" aria-label="" aria-describedby="basic-addon1">
+</div>
 
 
 
 
 
  </body>
+
+ <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+ <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
 </html>
