--- a/templates/main_info.html
+++ b/templates/main_info.html
@@ -45,13 +45,16 @@
      </div>
    </nav>
 
+
+<form method="POST" action="/find">
   <div class="input-group mb-3">
-  <div class="input-group-prepend">
-    <button class="btn btn-outline-secondary" type="button">Find by service</button>
-    <button class="btn btn-outline-secondary" type="button">Find by name</button>
+    <div class="input-group-prepend">
+      <button class="btn btn-outline-secondary" type="button">Find by service</button>
+      <button class="btn btn-outline-secondary" type="button">Find by name</button>
+    </div>
+    <input type="text" class="form-control" placeholder="" aria-label="" aria-describedby="basic-addon1" required>
   </div>
-  <input type="text" class="form-control" placeholder="" aria-label="" aria-describedby="basic-addon1">
-</div>
+</form>
 
 
 
