--- a/templates/service_create.html
+++ b/templates/service_create.html
@@ -2,30 +2,81 @@
 <html>
 <head>
 	<title>Create service</title>
-	<style>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-	</style>
-</head>
+	<style type="text/css">
+		body {
 
-<body>
-  <button onclick="location.href = '/'">Back to main page</button>
+			margin: 10%;
+		}
 
-  <h1>Create service</h1>
+
+		</style>
+
+
+	</head>
+
+
+
+
+	<body>
+
+	 <nav class="navbar navbar-expand-lg navbar-light bg-light">
+		 <a class="navbar-brand" href="#">TimePicker</a>
+		 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			 <span class="navbar-toggler-icon"></span>
+		 </button>
+		 <div class="collapse navbar-collapse" id="navbarNav">
+			 <ul class="navbar-nav">
+				 <li class="nav-item">
+					 <a class="nav-link" href="/mainpage">Search! </a>
+				 </li>
+				 <li class="nav-item active">
+					 <a class="nav-link" href="/create_service">Create own service<span class="sr-only">(current)</span></a>
+				 </li>
+				 <li class="nav-item">
+					 <a class="nav-link" href="/settings">Your account</a>
+				 </li>
+				 <li class="nav-item">
+					 <a class="nav-link" href="/logout">Logout</a>
+				 </li>
+			 </ul>
+		 </div>
+	 </nav>
+
+	 <div class="alert alert-secondary" role="alert" align="center">
+	   Step 1/3: Fill inputs.
+	 </div>
+
+
   <div>
     {% for message in get_flashed_messages() %}
       <h4>{{ message }}</h4>
     {% endfor %}
   </div>
   <form method = "POST" action="/create_service">
-    <p>Input name of your service<p>
-		<input class="input" type="text" name="name_service" placeholder="Barber"  required><br>
-    <p>Input description about yourself<p>
-		<input class="input" type="text" name="additional_information" placeholder="Adit. info"  required>
-    <button type="submit" class="btn">Next</button>
+		<div class="input-group">
+  		<div class="input-group-prepend">
+    		<span class="input-group-text" id="">Service name</span>
+		  </div>
+	 		<input class="form-control" class="input" type="text" name="name_service" placeholder="Hint: English tutor"  required>
+		</div>
+		<div class="input-group">
+		  <div class="input-group-prepend">
+		    <span class="input-group-text">Service description</span>
+		  </div>
+		  <textarea class="form-control" aria-label="With textarea"type="text" name="additional_information" placeholder="Hint: I was a teacher at the University of Cambridge, now i decided to stay home and can't live without teaching. I like kids..."  required></textarea>
+		</div>
+    <button type="submit" class="form-control">Next</button>
   </form>
 
 
 
 
 </body >
+
+ <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+ <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
 </html>
