registr different services

--- a/templates/service_create_date_select.html
+++ b/templates/service_create_date_select.html
@@ -24,7 +24,7 @@
       <table cellspacing="0">
         <tr>
           <th>
-            <p>Select date</p>
+            <p>Select date 4/4</p>
             <div id="datetimepicker4" class="input-append">
               <input class = "day" id = "date" data-format="yyyy-MM-dd" type="text"></input>
               <span class="add-on">
