--- a/templates/service_create_specialization.html
+++ b/templates/service_create_specialization.html
@@ -45,7 +45,7 @@
 	 </nav>
 
 	 <div class="alert alert-secondary" role="alert" align="center">
-	   Step 1/3: Fill inputs.
+	   Step 1/4: General information.
 	 </div>
 
 
@@ -57,13 +57,13 @@
 
 		<div class="input-group">
   		<div class="input-group-prepend">
-    		<span class="input-group-text">Service name</span>
+    		<span class="input-group-text">Your specialization</span>
 		  </div>
 	 		<input class="form-control" class="input" type="text" id='serviceName' placeholder="Hint: English tutor"  required>
 		</div>
 		<div class="input-group">
 		  <div class="input-group-prepend">
-		    <span class="input-group-text">Service description</span>
+		    <span class="input-group-text">Describe yourself</span>
 		  </div>
 		  <textarea class="form-control" aria-label="With textarea"type="text" id="additional_information" placeholder="Hint: I was a teacher at the University of Cambridge, now i decided to stay home and can't live without teaching. I like kids..."  required></textarea>
 		</div>
