--- a/templates/messanger.html
+++ b/templates/messanger.html
@@ -25,7 +25,7 @@
             </div>
           </div>
 
-          <div class="inbox_chat">
+          <div class="inbox_chat" id="chats">
             <div class="chat_list active_chat">
               <div class="chat_people">
                 <div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil"> </div>
@@ -113,7 +113,6 @@
       </div>
 
 
-      <p class="text-center top_spac"> Design by <a target="_blank" href="#">Sunil Rajput</a></p>
 
     </div></div>
     </body>
