--- a/templates/changepass_page.html
+++ b/templates/changepass_page.html
@@ -1,25 +1,90 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Login</title>
-	<style>
+	<meta charset="utf-8" />
+	<title>HTML5</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-	</style>
-</head>
+	<style type="text/css">
+		body {
 
-<body>
-  <h1>Change password page</h1>
+			margin: 10%;
+		}
+
+
+
+		</style>
+
+
+ </head>
+
+
+
+
+ <body>
+
+	 <nav class="navbar navbar-expand-lg navbar-light bg-light">
+		 <a class="navbar-brand" href="#">TimePicker</a>
+		 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			 <span class="navbar-toggler-icon"></span>
+		 </button>
+		 <div class="collapse navbar-collapse" id="navbarNav">
+			 <ul class="navbar-nav">
+				 <li class="nav-item">
+					 <a class="nav-link" href="/mainpage">Search! <span class="sr-only">(current)</span></a>
+				 </li>
+				 <li class="nav-item">
+					 <a class="nav-link" href="/create_service">Create own service</a>
+				 </li>
+				 <li class="nav-item">
+				 	<a class="nav-link" href="/created_services">Your services</a>
+				 </li>
+				 <li class="nav-item active">
+					 <a class="nav-link" href="/settings">Settings</a>
+				 </li>
+				 <li class="nav-item">
+					 <a class="nav-link" href="/logout">Logout</a>
+				 </li>
+			 </ul>
+		 </div>
+	 </nav>
+
+	 <div class="alert alert-secondary" role="alert" align="center">
+	   Change password page
+	 </div>
+
   <div>
     {% for message in get_flashed_messages() %}
       <h4>{{ message }}</h4>
     {% endfor %}
   </div>
-  <form method = "POST" action="/changepass">
-    <input class="input" type="password" name="old_password" placeholder="Enter old password"  required>
-    <input class="input" type="password" name="new_password" placeholder="Type new password"  required>
-    <input class="input"  type="password" name="new_password2" placeholder="Repeat new password" required>
-    <button type="submit" class="btn">Confirm</button>
+
+	<form method = "POST" action="/changepass">
+		<div class="input-group">
+  		<div class="input-group-prepend">
+    		<span class="input-group-text" id="">Type new password twice</span>
+		  </div>
+  		<input type="password" class="form-control" name="new_password" placeholder="***"  required>
+	 		<input type="password" class="form-control" name="new_password2" placeholder="***"  required>
+		</div>
+		<div class="input-group">
+  		<div class="input-group-prepend">
+    		<span class="input-group-text" id="">Type old password: </span>
+		  </div>
+	 		<input type="password" class="form-control" name="old_password" placeholder="***"  required>
+		</div>
+
+		<button type="submit" class="btn btn-outline-success btn-block">Confirm</button>
   </form>
+
+
+	<button type="button" class="btn btn-outline-secondary btn-block" onclick="window.location.href='/settings'">Back</button>
+
+
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
 
 </body >
 </html>
