--- a/templates/main_info.html
+++ b/templates/main_info.html
@@ -37,7 +37,13 @@
            <a class="nav-link" href="/create_service">Create own service</a>
          </li>
          <li class="nav-item">
-           <a class="nav-link" href="/settings">Your account</a>
+				 	<a class="nav-link" href="/created_services">Your services</a>
+				 </li>
+				 <li class="nav-item">
+					<a class="nav-link" href="/messanger?id=0">Chats</a>
+				 </li>
+         <li class="nav-item">
+           <a class="nav-link" href="/settings">Settings</a>
          </li>
          <li class="nav-item">
            <a class="nav-link" href="/logout">Logout</a>
