--- a/templates/service_create_services.html
+++ b/templates/service_create_services.html
@@ -35,7 +35,7 @@
 					 <a class="nav-link" href="/create_service">Create own service<span class="sr-only">(current)</span></a>
 				 </li>
 				 <li class="nav-item">
-					 <a class="nav-link" href="/settings">Your account</a>
+					 <a class="nav-link" href="/settings">Settings</a>
 				 </li>
 				 <li class="nav-item">
 					 <a class="nav-link" href="/logout">Logout</a>
