--- a/templates/service_create_specialization.html
+++ b/templates/service_create_specialization.html
@@ -35,7 +35,13 @@
 					 <a class="nav-link" href="/create_service">Create own service<span class="sr-only">(current)</span></a>
 				 </li>
 				 <li class="nav-item">
-					 <a class="nav-link" href="/settings">Your account</a>
+				 	<a class="nav-link" href="/created_services">Your services</a>
+				 </li>
+				 <li class="nav-item">
+					<a class="nav-link" href="/messanger?id=0">Chats</a>
+				 </li>
+				 <li class="nav-item">
+					 <a class="nav-link" href="/settings">Settings</a>
 				 </li>
 				 <li class="nav-item">
 					 <a class="nav-link" href="/logout">Logout</a>
