--- a/templates/settings_change.html
+++ b/templates/settings_change.html
@@ -36,8 +36,14 @@
          <li class="nav-item">
            <a class="nav-link" href="/create_service">Create own service</a>
          </li>
+         <li class="nav-item">
+				 	<a class="nav-link" href="/created_services">Your services</a>
+				 </li>
+				 <li class="nav-item">
+					<a class="nav-link" href="/messanger?id=0">Chats</a>
+				 </li>
          <li class="nav-item active">
-           <a class="nav-link" href="/settings">Your account<span class="sr-only">(current)</span></a>
+           <a class="nav-link" href="/settings">Settings<span class="sr-only">(current)</span></a>
          </li>
          <li class="nav-item">
            <a class="nav-link" href="/logout">Logout</a>
