--- a/templates/changepass_page.html
+++ b/templates/changepass_page.html
@@ -39,6 +39,9 @@
 				 <li class="nav-item">
 				 	<a class="nav-link" href="/created_services">Your services</a>
 				 </li>
+				 <li class="nav-item">
+					<a class="nav-link" href="/messanger?id=0">Chats</a>
+				 </li>
 				 <li class="nav-item active">
 					 <a class="nav-link" href="/settings">Settings</a>
 				 </li>
